# mie-1666

./: .gitignore  .langchain.db  README.md  configure.py  get_results.py  gpt4or.py  gpt_or.py  pyproject.toml
datasets/introduction_to_linear_optimization/problem_1/: gptcode.py  output.json
datasets/introduction_to_linear_optimization/problem_10/: gptcode.py  output.json
datasets/introduction_to_linear_optimization/problem_11/: gptcode.py  output.json
datasets/introduction_to_linear_optimization/problem_12/: gptcode.py
datasets/introduction_to_linear_optimization/problem_14/: gptcode.py  output.json
datasets/introduction_to_linear_optimization/problem_15/: gptcode.py
datasets/introduction_to_linear_optimization/problem_16/: gptcode.py  output.json
datasets/introduction_to_linear_optimization/problem_17/: gptcode.py  output.json
datasets/introduction_to_linear_optimization/problem_2/: gptcode.py  output.json
datasets/introduction_to_linear_optimization/problem_3/: gptcode.py  output.json
datasets/introduction_to_linear_optimization/problem_4/: gptcode.py  output.json
datasets/introduction_to_linear_optimization/problem_5/: gptcode.py
results/: introduction_to_linear_optimization.json  lectures_in_lp_modeling.json  linear_and_convex_optimization.json  model_building_in_mathematical_programming.json
src/: agent.py  configure.py  gpt_or.py  llms.py  main.py  messages.py  problems.py  utils.py
src/finetune/: default_inference.py  finetune_inference.py  pipeline.py  train.py
src/tot/: openai_llms.py  treeofthoughts.py
(+65 files in other folders)
